[package]
name = "something"
authors = ["esavier@erglabs.org"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
criterion = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
lazy_static = "1.4"
snow = { version = "0.8.0", features = ["default-resolver"] }
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-io = "*"
tokio-net = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = "1.1.0"
futures = { version = "0.3.0", features = ["thread-pool", ]}
http = "0.2"
httparse = "1.0"
time = "0.3.2"
once_cell = "1.5.2"
rand = "0.8.3"
anyhow = "1.0"
mio = "0.7.11"
fern = "0.6.0"
chrono = "0.4.19"
log = "*"
